--- a/package.json
+++ b/package.json
@@ -3,13 +3,24 @@
   "version": "1.0.0",
   "description": "Basscss themes",
   "scripts": {
-    "start": "node build"
+    "clean": "rm bundle.js",
+    "dev": "webpack-dev-server --progress --colors",
+    "prod": "webpack -p --progress --colors && npm run clean",
+    "start": "npm run dev"
   },
   "author": "Brent Jackson",
   "license": "MIT",
-  "devDependencies": {
-    "lodash": "^3.6.0",
-    "page-footer": "git://github.com/basscss/page-footer",
-    "page-header": "git://github.com/basscss/page-header"
+  "dependencies": {
+    "babel-loader": "^5.2.2",
+    "basscss": "^7.0.0",
+    "basscss.github.io": "github:basscss/basscss.github.io",
+    "blk": "^3.1.0",
+    "css-loader": "^0.15.1",
+    "cssnext-loader": "^1.0.1",
+    "file-loader": "^0.8.4",
+    "json-loader": "^0.5.2",
+    "static-site-generator-webpack-plugin": "^1.0.0",
+    "webpack": "^1.10.0",
+    "webpack-dev-server": "^1.10.1"
   }
 }
