--- a/package.json
+++ b/package.json
@@ -1,26 +1,7 @@
 {
-  "name": "themes",
-  "version": "1.0.0",
+  "name": "basscss-themes",
+  "version": "2.0.0",
   "description": "Basscss themes",
-  "scripts": {
-    "clean": "rm bundle.js",
-    "dev": "webpack-dev-server --progress --colors",
-    "prod": "webpack -p --progress --colors && npm run clean",
-    "start": "npm run dev"
-  },
   "author": "Brent Jackson",
-  "license": "MIT",
-  "dependencies": {
-    "babel-loader": "^5.2.2",
-    "basscss": "^7.0.0",
-    "basscss.github.io": "github:basscss/basscss.github.io",
-    "blk": "^3.1.0",
-    "css-loader": "^0.15.1",
-    "cssnext-loader": "^1.0.1",
-    "file-loader": "^0.8.4",
-    "json-loader": "^0.5.2",
-    "static-site-generator-webpack-plugin": "^1.0.0",
-    "webpack": "^1.10.0",
-    "webpack-dev-server": "^1.10.1"
-  }
+  "license": "MIT"
 }
